fixed z-index issue with parallax images

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.jarallax{
+    z-index: -1;
+}
